# floppa-notes

./: .gitignore  Cargo.toml  External Factors - Forces and Environment.docx  dev.sh  package.json  tailwind.config.js
.parcel-cache/: 2efde332d55f3985.txt  5d102dff0a3f4e7e  65259cec329a5a98  69882a7c82302e1c  8c6c735a08ad55fa  f91d87f762b285ab  lock.mdb
api/: Cargo.toml  auth.rs  config.rs  main.rs  notes.rs
api/src/: main.rs
web/: App.tsx  Cargo.toml  Trunk.toml  config.ts  index.html  main.css  tailwind.config.js
web/components/: Button.tsx  Header.tsx  Layout.tsx  index.ts
web/pages/: Account.tsx  Editor.tsx  Home.tsx  Notes.tsx  Settings.tsx  index.ts
web/src/: main.rs
