[package]
name = "api"
version = "0.1.0"
edition = "2021"

[[bin]]
name="api"
path="api/main.rs"

[dependencies]
tide = "0.16"
async-std = { version = "1.8.0", features = ["attributes"] }
mongodb = { version = "2.3", default-features = false, features = ["async-std-runtime"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
log = "0.4"
env_logger = "0.9"
